@@ -27,13 +27,13 @@ public class SqlModeHelperTest {
     @Test
     public void testNormal() throws DdlException {
         String sqlMode = "PIPES_AS_CONCAT";
-        Assert.assertEquals(new Long(2L), SqlModeHelper.encode(sqlMode));
+        Assert.assertEquals(Long.valueOf(2L), SqlModeHelper.encode(sqlMode));
 
         sqlMode = "";
-        Assert.assertEquals(new Long(0L), SqlModeHelper.encode(sqlMode));
+        Assert.assertEquals(Long.valueOf(0L), SqlModeHelper.encode(sqlMode));
 
         sqlMode = "0,1, PIPES_AS_CONCAT";
-        Assert.assertEquals(new Long(3L), SqlModeHelper.encode(sqlMode));
+        Assert.assertEquals(Long.valueOf(3L), SqlModeHelper.encode(sqlMode));
 
         long sqlModeValue = 2L;
         Assert.assertEquals("PIPES_AS_CONCAT", SqlModeHelper.decode(sqlModeValue));
@@ -42,17 +42,80 @@ public class SqlModeHelperTest {
         Assert.assertEquals("", SqlModeHelper.decode(sqlModeValue));
     }
 
-    @Test(expected = DdlException.class)
-    public void testInvalidSqlMode() throws DdlException {
-        String sqlMode = "PIPES_AS_CONCAT, WRONG_MODE";
-        SqlModeHelper.encode(sqlMode);
-        Assert.fail("No exception throws");
+    @Test
+    public void testHelperAndConverterKeepLegalBehavior() throws DdlException {
+        Long ansiMode = Long.valueOf(SqlModeHelper.MODE_ANSI
+                | SqlModeHelper.MODE_REAL_AS_FLOAT
+                | SqlModeHelper.MODE_PIPES_AS_CONCAT
+                | SqlModeHelper.MODE_ANSI_QUOTES
+                | SqlModeHelper.MODE_IGNORE_SPACE
+                | SqlModeHelper.MODE_ONLY_FULL_GROUP_BY);
+        Assert.assertEquals(ansiMode, SqlModeHelper.encode("ANSI"));
+        Assert.assertEquals(ansiMode, SqlModeHelper.encode(String.valueOf(SqlModeHelper.MODE_ANSI)));
+        Assert.assertEquals(ansiMode, VariableVarConverters.encode(SessionVariable.SQL_MODE, "ANSI"));
+        Assert.assertEquals(ansiMode,
+                VariableVarConverters.encode(SessionVariable.SQL_MODE, String.valueOf(SqlModeHelper.MODE_ANSI)));
+
+        Long mixedMode = Long.valueOf(SqlModeHelper.MODE_PIPES_AS_CONCAT | SqlModeHelper.MODE_ANSI_QUOTES);
+        Assert.assertEquals(mixedMode, SqlModeHelper.encode("PIPES_AS_CONCAT,ANSI_QUOTES"));
+        Assert.assertEquals(mixedMode,
+                VariableVarConverters.encode(SessionVariable.SQL_MODE, "PIPES_AS_CONCAT,ANSI_QUOTES"));
     }
 
-    @Test(expected = DdlException.class)
-    public void testInvalidDecode() throws DdlException {
-        long sqlMode = SqlModeHelper.MODE_LAST;
-        SqlModeHelper.decode(sqlMode);
-        Assert.fail("No exception throws");
+    @Test
+    public void testInvalidSqlMode() {
+        assertSqlModeEncodeFails("PIPES_AS_CONCAT, WRONG_MODE");
+    }
+
+    @Test
+    public void testInvalidNumericSqlMode() {
+        assertSqlModeEncodeFails("9223372036854775808");
+        assertSqlModeEncodeFails("-1");
+        assertSqlModeEncodeFails(String.valueOf(SqlModeHelper.MODE_LAST));
+    }
+
+    @Test
+    public void testInvalidDecode() {
+        assertSqlModeDecodeFails(SqlModeHelper.MODE_LAST);
+    }
+
+    @Test
+    public void testOtherVariableConverterSemantics() throws DdlException {
+        Assert.assertEquals(Long.valueOf(Long.MAX_VALUE),
+                VariableVarConverters.encode(SessionVariable.SQL_SELECT_LIMIT, "DEFAULT"));
+        Assert.assertEquals(Long.valueOf(-1L),
+                VariableVarConverters.encode(SessionVariable.SQL_SELECT_LIMIT, "-1"));
+        Assert.assertEquals(Long.valueOf(GlobalVariable.VALIDATE_PASSWORD_POLICY_DISABLED),
+                VariableVarConverters.encode(GlobalVariable.VALIDATE_PASSWORD_POLICY, "NONE"));
+        Assert.assertEquals(Long.valueOf(GlobalVariable.VALIDATE_PASSWORD_POLICY_STRONG),
+                VariableVarConverters.encode(GlobalVariable.VALIDATE_PASSWORD_POLICY, "2"));
+        assertVariableEncodeFails(GlobalVariable.VALIDATE_PASSWORD_POLICY, "9223372036854775808");
+        assertVariableEncodeFails(GlobalVariable.VALIDATE_PASSWORD_POLICY, "-1");
+        assertVariableEncodeFails(SessionVariable.SQL_SELECT_LIMIT, "9223372036854775808");
+    }
+
+    private void assertSqlModeEncodeFails(String value) {
+        try {
+            SqlModeHelper.encode(value);
+            Assert.fail("No exception throws");
+        } catch (DdlException e) {
+        }
+        assertVariableEncodeFails(SessionVariable.SQL_MODE, value);
+    }
+
+    private void assertSqlModeDecodeFails(long value) {
+        try {
+            SqlModeHelper.decode(value);
+            Assert.fail("No exception throws");
+        } catch (DdlException e) {
+        }
+    }
+
+    private void assertVariableEncodeFails(String variableName, String value) {
+        try {
+            VariableVarConverters.encode(variableName, value);
+            Assert.fail("No exception throws");
+        } catch (DdlException e) {
+        }
     }
 }
